syntax = "proto3";

package v1.user;

option go_package = "github.com/Joshualjh/gotest/protos/v1/user";

service User{
    rpc GetUser(GetUserRequest) returns (GetUserReponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersReponse);
}

message UserMessage{
    string user_id = 1;
    string name = 2;
    string phone_number = 3;
    int32 age = 4;
}

message GetUserRequest{
    string user_id = 1;
}

message GetUserReponse{
    UserMessage user_message = 1;
}

message ListUsersRequest{}

message ListUsersReponse{
    repeated UserMessage user_messages = 1;
}